[package]
name = "brick-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.56", features = ["HtmlSelectElement", "Window", "Location"] }
yew = "0.19.3"
js-sys = "0.3"